# AHRay

./: CMakeLists.txt  README.md  cnnm_sd15_to_cnnm_sdxl.py
include/: ahray_objloader.h  camera.h  cylinder.h  fragment.h  hitrecord.h  material.h  pointlight.h  ray.h  scene.h  sphere.h  triangle.h  vector3.h  viewport.h
renders/: render_01_gradient.ppm  render_02_sphere_plain.ppm  render_03_sphere_normals.ppm  render_04_first_scene.ppm  render_05_antialiasing.ppm  render_06_first_raytrace.ppm  render_08_refractions.ppm
src/: config.h  main.cpp
